# pyUIauto

./: .gitignore  README.md  main.py  pyproject.toml  version_check.py
.github/workflows/: build_wheel.yml  deploy.yml  run_dev_tests.yml  run_dev_tests_(poetry).yml
pyuiauto/: __init__.py  application.py  components.py  example.py  exceptions.py  main.py  wait.py
pyuiauto/base/: application.py  components.py
pyuiauto/mac/: application.py  components.py
pyuiauto/src/: application.py  components.py  exceptions.py
pyuiauto/src/base/: application.py
pyuiauto/src/mac/: application.py  components.py
pyuiauto/src/win/: application.py  components.py  win_application.py
pyuiauto/win/: application.py  components.py
tests/: test_os.py  test_pyuiauto.py
