[tool.poetry]
name = "pyUIauto"
version = "0.1.0"
description = ""
authors = ["harveyf2801 <47286380+harveyf2801@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
atomacos = {git = "https://github.com/daveenguyen/atomacos.git", platform = "darwin"}
pywinauto = {version = "^0.6.8", platform = "win32"}
pytest = "^5.2"
pyautogui = "0.9.41"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
